--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -40,8 +40,8 @@
     <p>2020年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
 
 
-
-  <h4><a class="black" href="docs/syllabus-applied-econometrics_2020-1Q.pdf">シラバス</a></h4>
+  <h4>シラバス（準備中）</h4>
+  <!--<h4><a class="black" href="docs/syllabus-applied-econometrics_2020-1Q.pdf">シラバス</a></h4>-->
 
      <br>
 
