--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -37,9 +37,10 @@
   <div class="content">
   <h2>計量経済学応用</h2>
 
-    <p>2020年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2020年度 <s>第1クォータ</s>　高知工科大学　経済・マネジメント学群</p>
+    <p>[新型コロナウィルスの影響により、1Qの開講は見合わせ、2Q以降に延期します]</p>
 
-  <h4><a class="black" href="docs/syllabus-applied-econometrics_2020-1Q.pdf">シラバス</a></h4>
+  <!--<h4><a class="black" href="docs/syllabus-applied-econometrics_2020-1Q.pdf">シラバス</a></h4>-->
 
      <br>
 
