--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -41,8 +41,9 @@
       <li><a href="docs/install-R_ubuntu.pdf" target="_blank">Linux (Ubuntu) 編</a> (PDF, 4.6MB)</li>
       <li><a href="docs/install-R_macOS.pdf" target="_blank">macOS 編</a> (PDF, 4.9MB)</a></li>
       <li><a href="docs/install-R_windows.pdf" target="_blank">Windows 編</a> （PDF, 5.8MB）</li>
+      <p><b>Rのインストールについてメールで質問されても、すぐに答えられるとは限りません</b>（私の授業の受講生は除く）。資料を読んでもわからないことがあれば、<a href="https://github.com/tokyor/r-wakalang" target="_blank">r-wakalang</a> の初心者チャンネル (#r_beginners) で質問することをお勧めします。</p>
     </ul>
-
+  
 
    <h2>Beamer用テーマ</h2>
 
