--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -37,10 +37,10 @@
   <div class="content">
   <h2>計量経済学応用</h2>
 
-    <p>2020年度 <s>第1クォータ</s>　高知工科大学　経済・マネジメント学群</p>
+    <p>2020年度 <s>第2クォータ</s>　高知工科大学　経済・マネジメント学群</p>
     <p>[新型コロナウィルスの影響により、1Qの開講は見合わせ、2Q以降に延期します]</p>
 
-  <!--<h4><a class="black" href="docs/syllabus-applied-econometrics_2020-1Q.pdf">シラバス</a></h4>-->
+  <h4><a class="black" href="docs/syllabus-applied-econometrics_2020-2Q.pdf">シラバス</a></h4>
 
      <br>
 
@@ -48,8 +48,7 @@
     <p>経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。今年度は、特に因果効果 (causal effects) を推定する方法について学ぶ。自らの研究上の疑問に答えるために因果効果に関する仮説を立て、その仮説を統計的因果推論の方法を用いて検証できるようになることを目指す。</p>
     <br>
 
-  <h3>授業の内容（準備中）</h3>
-  <!-- <h3><a href="contents/">授業の内容</a></h3> -->
+  <h3><a href="https://yukiyanai.github.io", target="_blank">授業の内容</a></h3>
     <br>
 
 
