--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -47,7 +47,7 @@
     <p>経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。今年度は、特に因果効果 (causal effects) を推定する方法について学ぶ。自らの研究上の疑問に答えるために因果効果に関する仮説を立て、その仮説を統計的因果推論の方法を用いて検証できるようになることを目指す。</p>
     <br>
 
-  <h3><a href="https://yukiyanai.github.io", target="_blank">授業の内容</a></h3>
+  <h3><a href="https://yukiyanai.github.io/econometics2/", target="_blank">授業の内容</a></h3>
     <br>
 
 
